syntax = "proto3";

package raftpb;

// Example RequestVote RPC arguments structure.
message RequestVoteArgs {
  // Your data here (2A, 2B).
  uint64 term = 1;           // candiate's term
  uint64 cid = 2;            // candidate's id
  int64 last_log_index = 3; // index of the candidate's last log entry
  int64 last_log_term = 4;  // term of candidate's last log entry
}

// Example RequestVote RPC reply structure.
message RequestVoteReply {
  // Your data here (2A).
  uint64 term = 1; // currentTerm of the receiver, for candidate to update itself
  bool granted = 2; // true -> candidate receives vote, false -> refuse to vote
}

message LogEntry { bytes rb = 1; }

message AppendEntriesArgs {
  // leader's term
  uint64 term = 1;
  // leader's id
  uint64 leader_id = 2;
  // leader's last commit log index
  int64 leader_commit = 3;
  // the term of entry corresponds to prev_log_index
  int64 prev_log_term = 4;
  // index of log entry immediately preceding the new ones
  int64 prev_log_index = 5;
  // data
  repeated LogEntry log_entries = 6;
}

message AppendEntriesReply {
  // my term, for leader to update
  uint64 term = 1;
  // true if follower contains entry matching prev_log_index and prev_log_term
  bool success = 2;
}
